# venue-playlists

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: refresh.yml
cache/: track_cache.json
config/: playlist_ids.json  venues.yaml
docs/: index.html  style.css
docs/data/: venues.json
scripts/: mint_refresh_token.py
venue_playlists/: __init__.py  build.py  compose.py  models.py  spotify.py
venue_playlists/events/: __init__.py  scrape.py  ticketmaster.py
