[project]
name = "venue-playlists"
version = "0.1.0"
description = "Auto-maintained Spotify playlists, one per live-music venue."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6",
    "trafilatura>=1.12",
    "anthropic>=0.40",
    "python-dateutil>=2.9",
]

[tool.uv]
package = false
